welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAVNT: Boolean){
  if (versLAVANT){
    for (pas <-1 to nbPas){avance()}
  }
  else {
    for (pas <-1 to nbPas){recule()}
  }
}